Fix student work layout and add cover stylings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 layout: home
 ---
 
-<h1 class="page-title">Welcome to the Mackenzie Yearbook for 2020-21!</h1>
+<div class="page-title">
+  <div class="wrapper">
+    <h1>Revival</h1>
+    <h2>The Advocate</h2>
+    <h3>2020 - 2021</h3>
+  </div>
+</div>
 
 <div class="cards">
   {%- for collection in site.collections -%} {%- for page in collection.docs -%}
