Update main page and showcase title

--- a/pages/_academics/student-work.html
+++ b/pages/_academics/student-work.html
@@ -1,67 +1,43 @@
 ---
-title: Student Work
+title: Film Showcase
 ---
 
-<h1 class="page-title">{{ page.title }}</h1>
+<!-- TODO: Make Owen's title -->
+<h1 class="page-title">
+  <div class="wrapper">
+    <span>{{ page.title | split: ' ' | first }}</span>
+    <span>{{ page.title | split: ' ' | last }}</span>
+  </div>
+</h1>
 
 <div class="grid">
   <figure class="col-3 row-2">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
+    <img src="//via.placeholder.com/800x600?text=Artwork" />
     <figcaption class="bottom right">Studen Name, Grade XX</figcaption>
   </figure>
 
   <figure class="col-2 row-3">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
+    <img src="//via.placeholder.com/800x600?text=Artwork" />
     <figcaption class="top left">Studen Name, Grade XX</figcaption>
   </figure>
 
   <figure class="col-3 row-2">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
+    <img src="//via.placeholder.com/800x600?text=Artwork" />
     <figcaption class="top left">Studen Name, Grade XX</figcaption>
   </figure>
 
   <figure class="col-2 row-2">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
+    <img src="//via.placeholder.com/800x600?text=Artwork" />
     <figcaption class="bottom left">Studen Name, Grade XX</figcaption>
   </figure>
 
-  <figure class="col-1 row-2">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="top right">Studen Name, Grade XX</figcaption>
-  </figure>
-
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="top right">Studen Name, Grade XX</figcaption>
-  </figure>
-
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="bottom right">Studen Name, Grade XX</figcaption>
-  </figure>
-
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="top left">Studen Name, Grade XX</figcaption>
-  </figure>
-
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="top left">Studen Name, Grade XX</figcaption>
-  </figure>
-
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
+  <figure class="col-2 row-2">
+    <img src="//via.placeholder.com/800x600?text=Artwork" />
     <figcaption class="bottom left">Studen Name, Grade XX</figcaption>
   </figure>
 
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="top right">Studen Name, Grade XX</figcaption>
-  </figure>
-
-  <figure class="col-1 row-1">
-    <img src="//via.placeholder.com/800x600?text=Student+Artwork" />
-    <figcaption class="top right">Studen Name, Grade XX</figcaption>
+  <figure class="col-2 row-1">
+    <img src="//via.placeholder.com/800x600?text=Artwork" />
+    <figcaption class="bottom left">Studen Name, Grade XX</figcaption>
   </figure>
 </div>
