--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@ layout: home
   {%- for collection in site.collections -%} {%- for page in collection.docs -%}
   <a href="{{ page.url | relative_url }}">
     <div class="card">
-      <div class="card-title">{{ page.title }}</div>
+      <div class="stem"></div>
+      <div class="light"></div>
+      <div class="card-bg">
+        <img
+          src="//via.placeholder.com/150x200?text={{ page.title | url_encode }}"
+          alt="{{ page.title }}"
+        />
+      </div>
+      <!-- <div class="card-title">{{ page.title }}</div> -->
     </div>
   </a>
   {%- endfor -%} {%- endfor -%}
