Add layouts for each type of page

--- a/pages/_academics/film-showcase.html
+++ b/pages/_academics/film-showcase.html
@@ -1,14 +1,7 @@
 ---
 title: Film Showcase
+layout: showcase
 ---
-
-<!-- TODO: Make Owen's title -->
-<h1 class="page-title">
-  <div class="wrapper">
-    <span>{{ page.title | split: ' ' | first }}</span>
-    <span>{{ page.title | split: ' ' | last }}</span>
-  </div>
-</h1>
 
 <div class="grid">
   <figure class="col-3 row-2">
