Add lyon's huddle and film showcase content

--- a/pages/_student-life/film-showcase.html
+++ b/pages/_student-life/film-showcase.html
@@ -5,32 +5,37 @@ layout: showcase
 
 <div class="grid">
   <figure class="col-3 row-2">
-    <img src="//via.placeholder.com/800x600?text=Artwork" />
-    <figcaption class="bottom right">Studen Name, Grade XX</figcaption>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Duq4ltejdK8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Simon Glickman, Grade 11</figcaption>
   </figure>
 
-  <figure class="col-2 row-3">
-    <img src="//via.placeholder.com/800x600?text=Artwork" />
-    <figcaption class="top left">Studen Name, Grade XX</figcaption>
+  <figure class="col-2 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8g_bFenvQ2w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="top left">Noa Morais, Grade 11</figcaption>
   </figure>
 
   <figure class="col-3 row-2">
-    <img src="//via.placeholder.com/800x600?text=Artwork" />
-    <figcaption class="top left">Studen Name, Grade XX</figcaption>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dqd52kKYTug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="top left">Simon Glickman, Grade 11</figcaption>
   </figure>
 
   <figure class="col-2 row-2">
-    <img src="//via.placeholder.com/800x600?text=Artwork" />
-    <figcaption class="bottom left">Studen Name, Grade XX</figcaption>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FIiqwWtZJoc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom left">Adrien Parala, Grade 11</figcaption>
   </figure>
 
   <figure class="col-2 row-2">
-    <img src="//via.placeholder.com/800x600?text=Artwork" />
-    <figcaption class="bottom left">Studen Name, Grade XX</figcaption>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UCgop6meiNA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom left">Noa Morais, Grade 11</figcaption>
   </figure>
 
-  <figure class="col-2 row-1">
-    <img src="//via.placeholder.com/800x600?text=Artwork" />
-    <figcaption class="bottom left">Studen Name, Grade XX</figcaption>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/feqYoA9co_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom left">Danielle Shram, Grade 11</figcaption>
+  </figure>
+
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0f6SzgaNVxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom left">Ana Maria Draguleasa, Grade 11</figcaption>
   </figure>
 </div>
