Move captions around

--- a/pages/_student-life/film-showcase.html
+++ b/pages/_student-life/film-showcase.html
@@ -16,17 +16,17 @@ layout: showcase
 
   <figure class="col-3 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/dqd52kKYTug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <figcaption class="top left">Simon Glickman, Grade 11</figcaption>
+    <figcaption class="bottom left">Simon Glickman, Grade 11</figcaption>
   </figure>
 
   <figure class="col-2 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/FIiqwWtZJoc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <figcaption class="bottom left">Adrien Parala, Grade 11</figcaption>
+    <figcaption class="bottom right">Adrien Parala, Grade 11</figcaption>
   </figure>
 
   <figure class="col-2 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/UCgop6meiNA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <figcaption class="bottom left">Noa Morais, Grade 11</figcaption>
+    <figcaption class="top right">Noa Morais, Grade 11</figcaption>
   </figure>
 
   <figure class="col-3 row-2">
@@ -36,6 +36,6 @@ layout: showcase
 
   <figure class="col-3 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0f6SzgaNVxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <figcaption class="bottom left">Ana Maria Draguleasa, Grade 11</figcaption>
+    <figcaption class="bottom right">Ana Maria Draguleasa, Grade 11</figcaption>
   </figure>
 </div>
