--- a/pages/_student-life/film-showcase.html
+++ b/pages/_student-life/film-showcase.html
@@ -3,7 +3,7 @@ title: Film Showcase
 layout: showcase
 ---
 
-<div class="grid">
+<div class="showcase-grid">
   <figure class="col-3 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Duq4ltejdK8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <figcaption class="bottom right">Simon Glickman, Grade 11</figcaption>
