Update lyons huddle page

--- a/pages/_events/lyons-huddle.html
+++ b/pages/_events/lyons-huddle.html
@@ -2,13 +2,13 @@
 title: The Lyon's Huddle
 ---
 
-<section class="lyons-huddle">
-  <h3>The Lyon’s Huddle with Nicole Kozlova</h3>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/74-8mk54wjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-  <h3>
-    Listen in on Kwasi Adu-Poku, a past Mackenzie Basketball player who went on
-    to play at McMaster University.
-  </h3>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/D1BkpNLJYLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section>
+<div class="grid">
+  <figure>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/74-8mk54wjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">The Lyon’s Huddle with Nicole Kozlova</figcaption>
+  </figure>
+  <figure>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/D1BkpNLJYLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom left">The Lyon's Huddle with Kwasi Adu-Poku</figcaption>
+  </figure>
+</div>
