Add Dance Showcase

--- a/pages/_student-life/dance-showcase.html
+++ b/pages/_student-life/dance-showcase.html
@@ -2,3 +2,14 @@
 title: Dance Showcase
 layout: showcase
 ---
+
+<div class="showcase-grid">
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Om-OWA8zm2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Zoom Dance</figcaption>
+  </figure>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/cOs711DWkEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">American Cliche</figcaption>
+  </figure>
+</div>
