Add dance videos

--- a/pages/_student-life/dance-showcase.html
+++ b/pages/_student-life/dance-showcase.html
@@ -12,4 +12,12 @@ layout: showcase
     <iframe width="560" height="315" src="https://www.youtube.com/embed/cOs711DWkEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <figcaption class="bottom right">American Cliche</figcaption>
   </figure>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1enCtp_vaiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Dancing in my Room</figcaption>
+  </figure>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Y_kU5gwaOkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Holidays Dance/figcaption>
+  </figure>
 </div>
