--- a/student-life.html
+++ b/student-life.html
@@ -16,7 +16,7 @@ collection: student-life
         <div class="light"></div>
         <div class="card-bg">
           <img
-            src="//via.placeholder.com/150x200?text={{ page.title | url_encode }}"
+            src="/assets/img/{{ page.title | slugify }}.png"
             alt="{{ page.title }}"
           />
         </div>
