Add lazy loading to grad plans

--- a/pages/_student-life/grad-plans.html
+++ b/pages/_student-life/grad-plans.html
@@ -7,7 +7,7 @@ layout: showcase
   {%- assign path = "/assets/img/grad" -%}
   {%- assign images = site.static_files | where_exp:"file","file.path contains path" -%}
   {%- for img in images -%}
-    <img src="{{ img.path | relative_url }}" />
+    <img loading="lazy" src="{{ img.path | relative_url }}" />
   {%- endfor -%}
 </section>
 
