Add music showcase

--- a/pages/_student-life/music-showcase.html
+++ b/pages/_student-life/music-showcase.html
@@ -2,3 +2,22 @@
 title: Music Showcase
 layout: showcase
 ---
+
+<div class="showcase-grid">
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-7vxFijISQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Ma'oz Tzur by Mackenzie Choir</figcaption>
+  </figure>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/p8LE2fkpwmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">The First Noel by Meghan, Matteo, Josh and Megan</figcaption>
+  </figure>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yIcesGN_4HE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Away in a Manger by Meghan and Matteo</figcaption>
+  </figure>
+  <figure class="col-3 row-2">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/tRC_Rvg1rAA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Silent Night by Chelsy, Celeste, Di and Robyn</figcaption>
+  </figure>
+</div>
