--- a/pages/_events/drama-show.html
+++ b/pages/_events/drama-show.html
@@ -2,7 +2,7 @@
 title: Drama Production
 ---
 
-<section class="drama-show">
+<section class="show">
   <h2>Much Ado About Zoom Class</h2>
   <h3>An adaptation of Shakespeare's Much Ado About Nothing</h3>
 
