--- a/pages/_events/java.html
+++ b/pages/_events/java.html
@@ -1,3 +1,7 @@
 ---
 title: Java After Dark
 ---
+
+<section class="show">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/1FZSQZZm73U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</section>
