--- a/pages/_student-life/dance-showcase.html
+++ b/pages/_student-life/dance-showcase.html
@@ -18,6 +18,6 @@ layout: showcase
   </figure>
   <figure class="col-3 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Y_kU5gwaOkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <figcaption class="bottom right">Holidays Dance/figcaption>
+    <figcaption class="bottom right">Holidays Dance</figcaption>
   </figure>
 </div>
