--- a/pages/_student-life/drama-showcase.html
+++ b/pages/_student-life/drama-showcase.html
@@ -2,3 +2,10 @@
 title: Drama Showcase
 layout: showcase
 ---
+
+<div class="showcase-grid">
+  <figure class="col-3 row-2" style="grid-column: 2/2; place-self: center;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/24-oEOlwEvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom right">Drama Night</figcaption>
+  </figure>
+</div>
