--- a/pages/_student-life/music-showcase.html
+++ b/pages/_student-life/music-showcase.html
@@ -4,6 +4,13 @@ layout: showcase
 ---
 
 <div class="showcase-grid">
+  <figure class="col-3 row-2" style="place-self: center;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JvdMb9CyWWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption class="bottom left">Music Night</figcaption>
+  </figure>
+</div>
+
+<div class="showcase-grid">
   <figure class="col-3 row-2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-7vxFijISQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <figcaption class="bottom right">Ma'oz Tzur by Mackenzie Choir</figcaption>
